2007-11-07  Roland Mas  <lolando@debian.org>

	* common/include/GroupJoinRequest.class.php: New
	send_accept_mail() function.
	* www/project/admin/index.php: Use it.

2007-11-06  Roland Mas  <lolando@debian.org>

	* www/include/BaseLanguage.class.php: Added
	setup_gettext_from_browser() and setup_gettext_for_user(), to be
	able to temporarily override a locale.
	* www/include/pre.php: Adapt accordingly.
	* common/include/GroupJoinRequest.class.php: Switch to the email
	recipient's locale before sending email, then switch back to the
	current user's locale.
	* common/include/Group.class.php: Ditto for group
	approval/rejection messages.

2007-11-04  Roland Mas  <lolando@debian.org>

	* Several fixes to remove vulnerabilities against symlink attacks
	in /tmp (CVE-2007-3921).
	* common/include/cron_utils.php: Use semaphore rather than
	insecure lock files.
	* cronjobs/massmail.php: Adapt to that semaphore change.
	* www/soap/index.php: Commented out debugging code that could be
	used to overwrite files.
	* cronjobs/mail/mailaliases.php and mailing_lists_create.php: Use
	/var/lib/gforge/dumps/mailman-aliases rather than
	/tmp/mailman-aliases. 

2007-10-31  Roland Mas  <lolando@debian.org>

	* www/include/project_home.php: updated
	"project_after_description" hook and added
	"project_before_description" and "project_public_area" hooks.
	Also, only show trove info if trove is enabled.  Based on patch
	#1626 by Nicolas Quienot.

	* www/my/index.php: Display the user's role in the projects he
	belongs to on his personal page.
	* www/include/user_home.php: Ditto, on his public profile page.

2007-10-26  Roland Mas  <lolando@debian.org>

	* www/tracker/admin/form-extrafieldcopy.php: Use the role_setting
	table instead of the artifact_perm view.
	* www/tracker/reporting/index.php: Ditto.

2007-10-25  Roland Mas  <lolando@debian.org>

	* www/pm/msproject/msp.php: Use the role_setting table instead of
	the project_perm view.

	* www/tracker/mod.php: Ditto for artifact_perm.
